user who is not logged in cannot post new user
