# routes/index.js
@@ -2,14 +2,14 @@ const passport = require('passport');
 
 const router = require('express').Router();
 
-router.use('/', require('./swagger'));
+router.use('/api-docs', require('./swagger'));
 router.use('/recipes', require('./recipes'));
 router.use('/users', require('./users'));
 
-router.get('/login', passport.authenticate('github'), (req, res) => { });
+router.get('/login', passport.authenticate('github'));
 
 router.get('/logout', function (req, res, next) {
-    req.logout(function (err) {
+    req.logout((err) => {
         if (err) { return next(err); }
         res.redirect('/');
     });
